--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
+
       - uses: pre-commit/action@v3.0.0
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: "1.18.x"
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
 
   build:
     runs-on: ubuntu-latest
