--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: binderhub-container-registry-helper
 description: A microservice to help BinderHub work with Public cloud container registries
 type: application
-version: 0.1.0
-appVersion: "0.0.0"
+version: 0.2.0
+appVersion: 0.2.0
