--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
 
@@ -35,7 +35,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
@@ -51,23 +51,19 @@ jobs:
       - name: go test
         run: make test
 
+      - name: helm package
+        run: helm package helm-chart
+
   container:
     needs:
       - lint
       - build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         # with:
         #   fetch-depth: 0
-
-      # - name: Get other tags
-      #   id: gettags
-      #   uses: jupyterhub/action-major-minor-tag-calculator@v2
-      #   with:
-      #     githubToken: ${{ secrets.GITHUB_TOKEN }}
-      #     prefix: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:"
 
       - name: Docker meta
         id: meta
@@ -93,6 +89,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to OCI Helm chart registry
+        if: >
+          github.event_name == 'push' &&
+          (github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
+          startsWith(github.ref, 'refs/tags/'))
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login --username ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
+
       - name: Build and push to container registry
         uses: docker/build-push-action@v4
         with:
@@ -108,3 +112,12 @@ jobs:
               github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
               startsWith(github.ref, 'refs/tags/')
             }}
+
+      - name: Package and push Helm chart
+        if: >
+          github.event_name == 'push' &&
+          (github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
+          startsWith(github.ref, 'refs/tags/'))
+        run: |
+          helm package helm-chart/
+          helm push binderhub-container-registry-helper-*.tgz oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
