Utility to check tags in Chart.yaml and values.yaml match git

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,9 @@ jobs:
       - name: helm package
         run: helm package helm-chart
 
+      - name: check tags
+        run: make check-tags-updated
+
   container:
     needs:
       - lint
