--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,13 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.18.x"
+          go-version-file: ./go.mod
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+
+      - name: check tags
+        run: make check-tags-updated
 
   build:
     runs-on: ubuntu-22.04
@@ -43,7 +46,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.18.x"
+          go-version-file: ./go.mod
 
       - name: go build
         run: make build
@@ -53,9 +56,6 @@ jobs:
 
       - name: helm package
         run: helm package helm-chart
-
-      - name: check tags
-        run: make check-tags-updated
 
   container:
     needs:
