--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,6 @@ permissions:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  # Set to "" to publish container on tags only
-  # Set to "<branch-name>" to also publish on every push to <branch-name>
-  PUBLISH_BRANCH: ""
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
@@ -34,9 +31,6 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
 
-      - name: check tags
-        run: make check-tags-updated
-
   build:
     runs-on: ubuntu-22.04
 
@@ -53,6 +47,10 @@ jobs:
 
       - name: go test
         run: make test
+
+      - name: check tags
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        run: make check-tags-updated
 
       - name: helm package
         run: helm package helm-chart
@@ -83,20 +81,14 @@ jobs:
 
       - name: Login to container registry
         uses: docker/login-action@v2
-        if: >
-          github.event_name == 'push' &&
-          (github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
-          startsWith(github.ref, 'refs/tags/'))
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to OCI Helm chart registry
-        if: >
-          github.event_name == 'push' &&
-          (github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
-          startsWith(github.ref, 'refs/tags/'))
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login --username ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
 
@@ -109,18 +101,10 @@ jobs:
           # tags: ${{ join(fromJson(steps.gettags.outputs.tags)) }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          push: >
-            ${{
-              github.event_name == 'push' &&
-              github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
-              startsWith(github.ref, 'refs/tags/')
-            }}
+          push: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
 
       - name: Package and push Helm chart
-        if: >
-          github.event_name == 'push' &&
-          (github.ref == format('refs/heads/{0}', env.PUBLISH_BRANCH) ||
-          startsWith(github.ref, 'refs/tags/'))
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
           helm package helm-chart/
           helm push binderhub-container-registry-helper-*.tgz oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
