--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ permissions:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  CHART_REPOSITORY: ${{ github.repository }}
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
@@ -112,4 +113,4 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
           helm package helm-chart/
-          helm push binderhub-container-registry-helper-*.tgz oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          helm push binderhub-container-registry-helper-*.tgz oci://${{ env.REGISTRY }}/${{ env.CHART_REPOSITORY }}
