--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,12 +8,10 @@ permissions:
   packages: write
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: quay.io
   IMAGE_NAME: ${{ github.repository }}
-  # Pushing images and OCI Helm charts to the same GHCR package doesn't work
-  # properly (Helm chart remains private), so use a different package repository
-  # for the Helm chart.
-  CHART_REPOSITORY: ${{ github.repository_owner }}/oci-helm-charts
+  # Can't push images and OCI Helm charts with the same tag to the same repository
+  CHART_REPOSITORY: ${{ github.repository_owner }}/helm-charts
   PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
@@ -62,7 +60,7 @@ jobs:
         run: make check-tags-updated
 
       - name: helm package
-        run: helm package helm-chart
+        run: make helm
 
   container:
     needs:
@@ -93,13 +91,13 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Login to OCI Helm chart registry
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login --username ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
+          echo ${{ secrets.REGISTRY_TOKEN }} | helm registry login --username ${{ secrets.REGISTRY_USERNAME }} --password-stdin ${{ env.REGISTRY }}
 
       - name: Build and push to container registry
         uses: docker/build-push-action@v4
@@ -115,5 +113,5 @@ jobs:
       - name: Package and push Helm chart
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
-          helm package helm-chart/
+          make helm
           helm push binderhub-container-registry-helper-*.tgz oci://${{ env.REGISTRY }}/${{ env.CHART_REPOSITORY }}
