--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/manics/binderhub-container-registry-helper
+  repository: quay.io/manics/binderhub-container-registry-helper
   pullPolicy: IfNotPresent
   tag: "0.2.1"
 
