Autogenerate a random auth_token

--- a/helm-chart/templates/secret.yaml
+++ b/helm-chart/templates/secret.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "binderhub-container-registry-helper.labels" . | nindent 4 }}
 type: Opaque
 data:
-  auth_token: {{ .Values.auth_token | required "Either .Values.auth_existing_secret_name or .Values.auth_token is required" | b64enc | quote }}
+  auth_token: {{ include "binderhub-container-registry-helper.auth_token" . | required "Failed to get binderhub-container-registry-helper.auth_token" | b64enc | quote }}
 {{- end }}
