--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,12 @@ jobs:
           skip-pkg-cache: true
           version: v1.53.3
 
+      - name: Install kubeconform
+        run: curl -sfL https://github.com/yannh/kubeconform/releases/download/v0.6.3/kubeconform-linux-amd64.tar.gz | tar -C /usr/local/bin -xzf - kubeconform
+
+      - name: check helm chart custom values
+        run: make helm-check-values
+
   build:
     runs-on: ubuntu-22.04
 
